# Doraemon-Bot

./: .env.example  Dockerfile  LICENSE  README.md  bot.py  launcher.py  pyproject.toml
cogs/: __init__.py  admin.py
helpers/: constants.py
